--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,14 @@ fibers
 *.json
 *.woff
 *DS_Store
+!bg_gui.png
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
