Added ATAG_Atlases to the repo since these are distributed with LEAD from now on.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 *.nii
 *.nii.gz
-!atlases/ATAG_Linear/*.nii
-!atlases/ATAG_Linear/*.nii.gz
-!atlases/ATAG_Nonlinear/*.nii
-!atlases/ATAG_Nonlinear/*.nii.gz
+!atlases/ATAG_Linear/*/*.nii
+!atlases/ATAG_Linear/*/*.nii.gz
+!atlases/ATAG_Nonlinear/*/*.nii
+!atlases/ATAG_Nonlinear/*/*.nii.gz
 
 *.ps
 gibsconnect*.mat
